correct responsive collapse menu

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,41 @@ body{
     cursor: pointer;
 }
 
+.navbar{
+    background-color: #363740;
+}
+
+button:focus{
+    outline-style: none;
+    background-color: rgb(159 162 180 / 0.08);
+}
+
+.icon-bar{
+    background-color: #DDE2FF;
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+}
+
+.icon-bar+.icon-bar{
+    margin-top: 5px;
+}
+
+.navbar-toggle{
+    border-color: #333;
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-right: 15px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
 .sidebar{
     height: 100vh;
     background-color: #363740;
@@ -126,29 +161,3 @@ hr{
     letter-spacing: 1px;
     color: #252733;
 }
-
-
-/*
-.row::after {
-    content: "";
-    clear: both;
-    display: table;
-}
-  
-[class*="col-"] {
-    float: left;
-    padding: 15px;
-}
-  
-  .col-1 {width: 8.33%;}
-  .col-2 {width: 16.66%;}
-  .col-3 {width: 25%;}
-  .col-4 {width: 33.33%;}
-  .col-5 {width: 41.66%;}
-  .col-6 {width: 50%;}
-  .col-7 {width: 58.33%;}
-  .col-8 {width: 66.66%;}
-  .col-9 {width: 75%;}
-  .col-10 {width: 83.33%;}
-  .col-11 {width: 91.66%;}
-  .col-12 {width: 100%;} */
